--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
   <section id="intro">
 
     <div class="intro-text">
-      <h3>Welcome to FOSSEE</h3>
-      <p>We promote the use of FOSS tools in the country</p>
+      <h3>Welcome to Workshop on FOSSEE</h3>
+      <p>To promote the use of FOSS tools in the country</p>
     </div>
 
     <div class="product-screens">
-        <div class="product-screen-1" data-aos="fade-up" data-aos-delay="400">
+        <div class="product-screen-1">
         <img src="img/img1-a.jpg" alt="">
       </div>
     </div>
 
     <div class="product-screens">
-        <div class="product-screen-2" data-aos="fade-up" data-aos-delay="200">
+        <div class="product-screen-2">
         <img src="img/img2-a.jpg" alt="">
       </div>
     </div>
 
     <div class="product-screens">
-        <div class="product-screen-3" data-aos="fade-up">
+        <div class="product-screen-3">
         <img src="img/img3-a.jpg" alt="">
       </div>
     </div>
@@ -101,20 +101,20 @@
 <section id="about" class="section-bg">
   <div class="container-fluid">
     <div class="section-header">
-      <h3 class="section-title">About FOSSEE</h3>
+      <h3 class="section-title">About The Workshop</h3>
       <span class="section-divider"></span>
       <p class="section-description">
         </p>
     </div>
 
     <div class="row">
-      <div class="col-lg-6 about-img" data-aos="fade-right">
+      <div class="col-lg-6 about-img">
         <img src="img/opensource.jpg" alt="">
       </div>
 
       <div class="col-lg-6 content" data-aos="fade-left">
-        <h2>FOSSEE (Free and Open Source Software in Education) project promotes the use of FOSS tools in our country.</h2>
-        <h3>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h3>
+        <h2>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h2>
+ 
         <p>
           FOSS software is software with source code that anyone can inspect, modify, enhance and use free of cost. With this in mind, FOSSEE aims to reduce dependency on proprietary software in educational institutions.
         </p>
@@ -136,7 +136,7 @@
           <span class="section-divider"></span>
           <p class="section-description"></p>
         </div>
-        <div class="row" data-aos="fade-up">
+        <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="member">
 
@@ -178,8 +178,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="" data-aos="fade-left">
-            <div data-aos="fade-right">
+            <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="">
+            <div>
               <h2>Statistics</h2>
               <h3>FOSSEE believes in the concept of FOSS even when it comes to learning and has conducted a number of workshops.</h3>
               <p>A variety of workshops have been conducted on leading technologies like Python, its applications in scientic computing, arduino,etc. They have collaborated with organisations like Python, Scilab, etc on the same.</p>
@@ -198,14 +198,14 @@
         <div class="row">
           <div class="col-12">
             <img class="advanced-feature-img-left" src="img/advanced-feature-2.jpg" alt="">
-            <div data-aos="fade-left">
+            <div>
               <h2>MOTTO OF FOSSEE</h2>
-              <i class="ion-ios-eye" data-aos="fade-left"></i>
-              <p data-aos="fade-left"><strong>Awareness:</strong> To spread awareness on open source and the usage of FOSS tools among the community.</p>
-              <i class="ion-radio-waves" data-aos="fade-left" data-aos-delay="200"></i>
-              <p data-aos="fade-left" data-aos-delay="200"><strong>Promotion:</strong> To promote the usage of FOSS tools to help improve the quality of education.</p>
-              <i class="ion-android-laptop" data-aos="fade-left" data-aos-delay="400"></i>
-              <p data-aos="fade-left" data-aos-delay="400"><strong>Hands-on experience:</strong> To provide hands-on experience on the usage of FOSS tools</p>
+              <i class="ion-ios-eye"></i>
+              <p><strong>Awareness:</strong> To spread awareness on open source and the usage of FOSS tools among the community.</p>
+              <i class="ion-radio-waves"></i>
+              <p><strong>Promotion:</strong> To promote the usage of FOSS tools to help improve the quality of education.</p>
+              <i class="ion-android-laptop"></i>
+              <p><strong>Hands-on experience:</strong> To provide hands-on experience on the usage of FOSS tools</p>
             </div>
           </div>
         </div>
@@ -227,26 +227,23 @@
       <div class="row">
 
         <div class="col-lg-4 col-md-6">
-          <div class="box" data-aos="fade-right">
+          <div class="box">
             <h3>About</h3>
-            <p>Any code generally functions by writing on Notepad and then compiling on Command Prompt. To do just that, you need a computer that runs Windows, which will set you back by at least Rs 20,000 but IIT Bombay students have devised a simpler and cheaper and their solution is a Rs 7,500 notebook that lets you write software code effortlessly.
-
-</p>
+            <p>Here is the oportunity to witness the low-cost notebook developed by IIT Bombay. The cheapest ever of around Rs 8,000/- a fullfeatured notebook for students.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
-          <div class="box featured" data-aos="fade-up">
+          <div class="box featured">
             <h3>THE GOLDEN LAPTOP</h3>
           <a href="img/lapy.png" class="gallery-popup"><img src="img/lapy.png"></a>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
-          <div class="box" data-aos="fade-left">
+          <div class="box">
             <h3>Features</h3>
           <p>The laptop runs on a modified version of Ubuntu Linux OS. The device also comes pre-loaded with several FOSS like Chrome and Firefox , LibreOffice, Gnome player, AV tools such as Audacity and several other education tools and tutorials (such as wikipedia in 10 Indian languages)for students and researchers, as well as for watching movies and music.
-
 </p>
           </div>
         </div>
@@ -260,26 +257,26 @@
         <div class="row">
 
           <div class="col-lg-8 offset-lg-4">
-            <div class="section-header" data-aos="fade" data-aos-duration="1000">
-              <h3 class="section-title">Projects</h3>
+            <div class="section-header">
+              <h3 class="section-title">Hands-On</h3>
               <span class="section-divider"></span>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-5 features-img">
-            <img src="img/strat-2.jpg" alt="" data-aos="fade-right" data-aos-easing="ease-out-back">
+            <img src="img/strat-2.jpg" alt=">
           </div>
 
           <div class="col-lg-8 col-md-7 ">
 
             <div class="row">
 
-              <div class="col-lg-6 col-md-6 box" data-aos="fade-left">
+              <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-ios-thunderstorm"></i></div>
                 <h4 class="title"><strong>Scilab</strong></h4>
-                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises , France. Scilab also includes Xcos which is an open source alternative to Simulink .</p>
+                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises , France. Scilab also includes Xcos which is an open source alternative to Simulink. To install Scilab, open the terminal and type 'sudo apt-get install scilab'</p>
               </div>
-              <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="100">
+              <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-python"></i></div>
                 <h4 class="title"><strong>Python</strong></h4>
                 <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain . It supports multiple programming paradigms .</p>
