--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About FOSSEE</a></li>
+          <li><a href="#about">About The Workshop</a></li>
           <li><a href="#team">Speakers</a></li>
           <li><a href="#pricing">Special Attraction</a></li>
           <li><a href="#features">Projects</a></li>
@@ -112,14 +112,14 @@
         <img src="img/opensource.jpg" alt="">
       </div>
 
-      <div class="col-lg-6 content" data-aos="fade-left">
+      <div class="col-lg-6 content">
         <h2>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h2>
  
         <p>
           FOSS software is software with source code that anyone can inspect, modify, enhance and use free of cost. With this in mind, FOSSEE aims to reduce dependency on proprietary software in educational institutions.
         </p>
         <p>
-        They encourage the use of FOSS tools through various activities to ensure commercial software is replaced by equivalent FOSS tools. They also develop new FOSS tools and upgrade existing tools to meet requirements in academia and research. The FOSSEE project is part of the National Mission on Education through Information and Communication Technology (ICT), Ministry of Human Resources and Development, Government of India.
+        They encourage the use of FOSS tools through various activities to ensure commercial software is replaced by equivalent FOSS tools.
         </p>
       </div>
     </div>
@@ -264,7 +264,7 @@
           </div>
 
           <div class="col-lg-4 col-md-5 features-img">
-            <img src="img/strat-2.jpg" alt=">
+            <img src="img/strat-2.jpg" alt="">
           </div>
 
           <div class="col-lg-8 col-md-7 ">
@@ -281,12 +281,12 @@
                 <h4 class="title"><strong>Python</strong></h4>
                 <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain . It supports multiple programming paradigms .</p>
               </div>
-              <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="200">
+              <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-tux"></i></div>
                 <h4 class="title"><strong>Open Foam</strong></h4>
                 <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions , turblence and heat transfer to solid dynamics and electromagnets .</p>
               </div>
-              <div class="col-lg-6 col-md-6 box" data-aos="fade-left" data-aos-delay="300">
+              <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
                 <h4 class="title"><strong>Sci Lab Arduino</strong></h4>
                 <p class="description">The Scilab-arduino interface is devoted to the control of arduino from scilab.The interface help user to perform embded systems experiments  on arduino using scilab code and also through GUI based simulation enviornment , Xcos .</p>
@@ -322,7 +322,7 @@
         <div class="row">
 
           <div class="col-lg-6">
-            <div class="box" data-aos="fade-right">
+            <div class="box">
               <div class="icon"><i class="ion-calendar"></i></div>
               <h4 class="title"><a href="">Date</a></h4>
               <p class="description">16th-17th February</p>
@@ -330,25 +330,25 @@
           </div>
 
           <div class="col-lg-6">
-            <div class="box" data-aos="fade-left">
+            <div class="box">
               <div class="icon"><i class="ion-ios-stopwatch-outline"></i></div>
               <h4 class="title"><a href="">Time</a></h4>
-              <p class="description">6:00 P.M. to 8:00 P.M.</p>
+              <p class="description">3:30 P.M. to 9:30 P.M. - Friday</br>10:00 A.M. to 4:00 P.M. - Saturday</p>
             </div>
           </div>
 
           <div class="col-lg-6">
-            <div class="box" data-aos="fade-right">
+            <div class="box">
               <div class="icon"><i class="ion-ios-location"></i></div>
               <h4 class="title"><a href="">Venue</a></h4>
-              <p class="description">D.M. Sen Auditorium 1</br> </p>
+              <p class="description">NIT Durgapur</br> </p>
             </br>
               <p class="description"></p>
             </div>
           </div>
 
           <div class="col-lg-6">
-            <div class="box" data-aos="fade-left">
+            <div class="box">
               <div class="icon"><i class="ion-ios-people"></i></div>
               <h4 class="title"><a href="">Organised by</a></h4>
             <a href="http://nitdgplug.org"><p class="description">GNU/Linux Users' Group, NIT Durgapur</a> in association with IIT Bombay and Deep Root Linux</p>
