--- a/index.html
+++ b/index.html
@@ -279,17 +279,12 @@
               <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-python"></i></div>
                 <h4 class="title"><strong>Python</strong></h4>
-                <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain . It supports multiple programming paradigms .</p>
+                <p class="description">Python is a general-purpose high-level remarkably powerful dynamic programming language that is used in wide variety of applications domain . It supports multiple programming paradigms.</p>
               </div>
               <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-tux"></i></div>
-                <h4 class="title"><strong>Open Foam</strong></h4>
-                <p class="description">Open Foam ia a free and open source CFD toolbox used to solve anything from complex fluids flows involving chemical reactions , turblence and heat transfer to solid dynamics and electromagnets .</p>
-              </div>
-              <div class="col-lg-6 col-md-6 box">
-                <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                <h4 class="title"><strong>Sci Lab Arduino</strong></h4>
-                <p class="description">The Scilab-arduino interface is devoted to the control of arduino from scilab.The interface help user to perform embded systems experiments  on arduino using scilab code and also through GUI based simulation enviornment , Xcos .</p>
+                <h4 class="title"><strong>LaTex</strong></h4>
+                <p class="description">LaTeX is a free and open source typesetting environment. LaTeX is widely used to prepare scientific documents.</p>
               </div>
             </div>
 
@@ -382,7 +377,7 @@
         <div class="row no-gutters">
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
+            <div class="gallery-item">
               <a href="img/gallery/gallery-1.jpg" class="gallery-popup">
                 <img src="img/gallery/gallery-1.jpg" alt="">
               </a>
@@ -390,7 +385,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
+            <div class="gallery-item">
               <a href="img/gallery/gallery-2.jpg" class="gallery-popup">
                 <img src="img/gallery/gallery-2.jpg" alt="">
               </a>
@@ -398,7 +393,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
+            <div class="gallery-item">
               <a href="img/gallery/gallery-3.jpg" class="gallery-popup">
                 <img src="img/gallery/gallery-3.jpg" alt="">
               </a>
@@ -406,15 +401,15 @@
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
-              <a href="img/gallery/gallery4.jpg" class="gallery-popup">
+            <div class="gallery-item">
+              <a href="img/gallery/gallery4.jpg">
                 <img src="img/gallery/gallery4.jpg" alt="">
               </a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
+            <div class="gallery-item">
               <a href="img/gallery/gallery5.jpg" class="gallery-popup">
                 <img src="img/gallery/gallery5.jpg" alt="">
               </a>
@@ -422,7 +417,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="gallery-item" data-aos="fade-up">
+            <div class="gallery-item">
               <a href="img/gallery/gallery6.jpg" class="gallery-popup">
                 <img src="img/gallery/gallery6.jpg" alt="">
               </a>
@@ -460,15 +455,17 @@
     ============================-->
     <section id="contact">
   <div class="container">
-    <div class="row" data-aos="fade-up">
+    <div class="row">
 
       <div class="col-lg-4 col-md-4">
         <div class="contact-about">
           <h3>Contact Us</h3>
           <p></p>
           <div class="social-links">
-            <a href="https://www.facebook.com/nitdgplug/" ><i class="fa fa-facebook-square"></i></a>
-            <a href="mailto:contact@nitdgplug.org" ><i class="fa fa-envelope"></i></a>
+            <a href="mailto:jaydeep@cse.nitdgp.ac.in" ><i class="fa fa-envelope"></i></a>
+            <p>Jaydeep Howlader</p>
+            <a href="mailto:suvrojit.das@cse.nitdgp.ac.in" ><i class="fa fa-envelope"></i></a>
+            <p>Suvrojit Das</p>
         </div>
         </div>
       </div>
@@ -490,7 +487,8 @@
 
           <div>
             <i class="ion-ios-telephone-outline"></i>
-            <p>+917076316399</p>
+            <p>+919434788178</p>
+            <p>+919434788197</p>
           </div>
 
         </div>
