--- a/index.html
+++ b/index.html
@@ -173,24 +173,6 @@
     <!--==========================
       Product Featuress Section
     ============================-->
-    <section id="advanced-features">
-    <div class="features-row section-bg">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <img class="advanced-feature-img-right" src="img/advanced-feature-3.jpg" alt="">
-            <div>
-              <h2>Statistics</h2>
-              <h3>FOSSEE believes in the concept of FOSS even when it comes to learning and has conducted a number of workshops.</h3>
-              <p>A variety of workshops have been conducted on leading technologies like Python, its applications in scientic computing, arduino,etc. They have collaborated with organisations like Python, Scilab, etc on the same.</p>
-
-              <p>A total of over 1000 workshops have been conducted by FOSSEE in association with popular organisations like Python, OpenFOAM, eSims,etc, which are also their textbook companions.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section id="advanced-features">
     <div class="features-row">
@@ -305,6 +287,42 @@
     ============================-->
     <!--      More Features Section
     ============================-->
+    <section id="advanced-features">
+
+  <div class="features-row section-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div>
+            <h1>Instruction for spoken tutorials</h1>
+            <p>Participants should preload spoken tutorial in their laptop. They must have headphones or earphones to listen to spoken tutorials</p>
+            <p>To install spoken tutorial, they are instructed to do the following:</p>
+            <p><strong>Procedure 1:</strong></p>
+            <ol type="1">
+              <li>Go to <a href="http://www.spoken-tutorial.org">www.spoken-tutorial.org</a>>Software Training>Procedure>Choose 'Create Your Own Disc Image'.</li>
+              <li>Select FOSS Category(e.g. Scilab, LibreOffice Impress etc.).</li>
+              <li>Select Level.</li>
+              <li>Select Preferred Language.</li>
+              <li>Click on 'Add Selected FOSS'.</li>
+              <li>Click on 'Create Zip File'.</li>
+              <li>Now you will get the download option on the right side.</li>
+            </ol>
+            <p><strong>Procedure 2:</strong> Direct download link:<a href="http://www.spoken-tutorial.org/cdcontent">http://www.spoken-tutorial.org/cdcontent</a></p>
+              <ol type="1">
+                <li>Select FOSS Category(e.g. Scilab, LibreOffice Impress etc.).</li>
+                <li>Select Level.</li>
+                <li>Select Preferred Language.</li>
+                <li>Click on 'Add Selected FOSS'.</li>
+                <li>Click on 'Create Zip File'.</li>
+                <li>Now you will get the download option on the right side.</li>
+            </ol>
+            <p>Once it is downloaded, you can unzip it and distribute among the participants.</br>If you face any difficulty then please feel free to contact us.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <section id="more-features" class="section-bg">
       <div class="container">
 
