--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <div class="col-lg-6 content">
         <h2>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h2>
- 
+
         <p>
           FOSS software is software with source code that anyone can inspect, modify, enhance and use free of cost. With this in mind, FOSSEE aims to reduce dependency on proprietary software in educational institutions.
         </p>
@@ -174,6 +174,7 @@
       Product Featuress Section
     ============================-->
 
+
   <section id="advanced-features">
     <div class="features-row">
       <div class="container">
@@ -197,6 +198,7 @@
   <!--==========================
     Pricing Section
   ============================-->
+
   <section id="pricing" class="section-bg">
     <div class="container">
 
@@ -233,6 +235,114 @@
       </div>
     </div>
   </section><!-- #pricing -->
+
+  <section>
+    <table class="table table-hover table-bordered">
+      <h2>PROGRAM SCHEDULE</h2>
+      <thead>
+        <tr>
+          <th scope="col" width="00" >16th February 2018</th>
+          <th scope="col"></th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+
+          <td>3:30 - 4:30 P.M.</td>
+          <td>Registration</td>
+          </tr>
+
+        <tr>
+          <td>4:30 - 4:45 P.M.</td>
+          <td>Inauguration</td>
+        </tr>
+
+        <tr>
+          <td>4:45 - 4:50 P.M.</td>
+          <td>Welcome Address by Director, NIT Durgapur</td>
+        </tr>
+
+        <tr>
+          <td>4:50 - 6:30 P.M.</td>
+          <td>Address by Prof. Kannan Moudgalya, IIT Bombay followed by</br> Demonstration of Golden Laptop</td>
+        </tr>
+
+        <tr>
+          <td>6:30 – 6:45 P.M.</td>
+          <td>Tea Break</td>
+        </tr>
+
+        <tr>
+          <td>6:45 - 8:45 P.M</td>
+          <td>Hands-on (#1) session on Scilab Introduction and Python </br>conducted by the Institute Volunteers
+    Parallel Event of demonstration</br> of Golden Laptop  at Central Library</td>
+        </tr>
+
+        <tr>
+          <td>8:45 - 9:30 P.M.</td>
+          <td>Dinner</td>
+        </tr>
+        </tbody>
+    </table>
+
+
+    <div>
+    </br>
+    </div>
+
+
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">17th February 2018</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+
+        <tr>
+          <td>10:00 - 11:00 A.M.</td>
+          <td>Address by Mr. Abhas Abhinav, DeepRoot Linux </br>(Technical Session #1)Parallel Even of the display of </br>Golden Laptop Central Library</td>
+        </tr>
+
+        <tr>
+          <td>11:00 - 11:15  A.M.</td>
+          <td>Session break, Tea program</td>
+        </tr>
+
+        <tr>
+          <td>11:15 - 12:30 Noon</td>
+          <td>Address by Mr. Abhas Abhinav, DeepRoot Linux </br>(Technical Session #2), Open Discussion and Interaction.</br>
+    Parallel Even of demonstration of Golden Laptop Central Library
+    </td>
+        </tr>
+
+        <tr>
+          <td>12:30 - 1:30 P.M.</td>
+          <td>Lunch</td>
+        </tr>
+
+        <tr>
+          <td>1:30 - 3:30 P.M.</td>
+          <td>Hands-on (#2) session Spoken Tutorial Scilab, LaTex and </br>LibreOffice by Prof. Kannan
+    Parallel Even of demonstration </br>of Golden Laptop  Central Library</td>
+        </tr>
+
+        <tr>
+          <td>3:30 - 4:00 P.M.</td>
+          <td>Valedictory followed by Tea</td>
+        </tr>
+
+        <tr>
+          <td>4:00 - 4:30</td>
+          <td>Press Conference</td>
+        </tr>
+
+      </tbody>
+    </table>
+</section>
+
     <section id="features" class="section-bg">
       <div class="container">
 
@@ -256,7 +366,7 @@
               <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-ios-thunderstorm"></i></div>
                 <h4 class="title"><strong>Scilab</strong></h4>
-                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises , France. Scilab also includes Xcos which is an open source alternative to Simulink. To install Scilab, open the terminal and type 'sudo apt-get install scilab'</p>
+                <p class="description">Scilab is a free and open source software for numerical computaion developed by Scilab Enterprises , France. Scilab also includes Xcos which is an open source alternative to Simulink. To install Scilab, open the terminal and type <pre>sudo apt-get install scilab</pre></p>
               </div>
               <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-python"></i></div>
@@ -266,7 +376,7 @@
               <div class="col-lg-6 col-md-6 box">
                 <div class="icon"><i class="ion-social-tux"></i></div>
                 <h4 class="title"><strong>LaTex</strong></h4>
-                <p class="description">LaTeX is a free and open source typesetting environment. LaTeX is widely used to prepare scientific documents.</p>
+                <p class="description">LaTeX is a free and open source typesetting environment. LaTeX is widely used to prepare scientific documents.<pre>sudo apt-get install texlive-full</pre></p>
               </div>
             </div>
 
@@ -447,9 +557,7 @@
       </div>
     </section><!-- #gallery -->
 
-    <div>
-    </br>
-    </br>
+    <div class = "break">
     </br>
     </div>
 
