--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     ============================-->
     <section id="advanced-features">
 
-  <div class="features-row section-bg">
+    <div class="features-row section-bg">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -432,6 +432,7 @@
       </div>
     </div>
   </div>
+</section>
 
     <section id="more-features" class="section-bg">
       <div class="container">
