--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <div class="col-lg-6 content">
-        <h2>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h2>
+        <h3>The term "open source" refers to something people can modify and share because its design is publicly accessible.</h3>
 
         <p>
           FOSS software is software with source code that anyone can inspect, modify, enhance and use free of cost. With this in mind, FOSSEE aims to reduce dependency on proprietary software in educational institutions.
@@ -237,8 +237,14 @@
   </section><!-- #pricing -->
 
   <section>
+    <div class="container-fluid">
+    <div class="section-header">
+      <h3 class="section-title">Program Schedule</h3>
+      <span class="section-divider"></span>
+      <p class="section-description">
+     </p>
     <table class="table table-hover table-bordered">
-      <h2>PROGRAM SCHEDULE</h2>
+    </div>
       <thead>
         <tr>
           <th scope="col" width="00" >16th February 2018</th>
@@ -398,13 +404,17 @@
     <!--      More Features Section
     ============================-->
     <section id="advanced-features">
-
+    <div class="container-fluid">
+    <div class="section-header">
+      <h3 class="section-title">Instructions for Spoken Tutorials</h3>
+      <span class="section-divider"></span>
+      <p class="section-description">
+        </p>
     <div class="features-row section-bg">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div>
-            <h1>Instruction for spoken tutorials</h1>
             <p>Participants should preload spoken tutorial in their laptop. They must have headphones or earphones to listen to spoken tutorials</p>
             <p>To install spoken tutorial, they are instructed to do the following:</p>
             <p><strong>Procedure 1:</strong></p>
