--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="img/#.png">
+    <link rel="shortcut icon" href="img/#.png">
     <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-touch-icon-114x114.png">
@@ -406,15 +406,12 @@ About Us Section
   ============================-->
   <section id="advanced-features">
   <div class="features-row section-bg">
-  <div class="container-fluid">
-  <div class="section-header">
-   <h3 class="section-title">Instructions for Spoken Tutorials</h3>
-    <span class="section-divider"></span>
-    <p class="section-description">
-      </p>
+  <div class="container">
+
     <div class="row">
       <div class="col-12">
         <div>
+          <h2><strong>Instructions for Spoken Tutorials</strong></h2>
           <p>Participants should preload spoken tutorial in their laptop. They must have headphones or earphones to listen to spoken tutorials</p>
           <p>To install spoken tutorial, they are instructed to do the following:</p>
           <p><strong>Procedure 1:</strong></p>
